// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the previous snapshot with a multiple failure durations 1`] = `
<div
  className="testHistoryBar"
>
  <div
    style={
      Object {
        "left": NaN,
        "width": NaN,
      }
    }
    title="an hour from 5/16/2018 1:00am - 5/16/2018 2:00am"
  />
  <div
    style={
      Object {
        "left": NaN,
        "width": NaN,
      }
    }
    title="2 hours from 5/16/2018 5:00am - 5/16/2018 7:00am"
  />
</div>
`;

exports[`matches the previous snapshot with a single failure duration 1`] = `
<div
  className="testHistoryBar"
>
  <div
    style={
      Object {
        "left": NaN,
        "width": NaN,
      }
    }
    title="an hour from 5/16/2018 1:00am - 5/16/2018 2:00am"
  />
</div>
`;

exports[`matches the previous snapshot with no data 1`] = `
<div
  className="testHistoryBar"
/>
`;
